--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-07  Alexander Shopov  <ash@contact.bg>
+
+        * bg.po: Updated Bulgarian translation
+
 2004-09-07  Laszlo Dvornik  <dvornik@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
