--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Mugurel Tudor  <mugurelu@go.ro>
+
+	* ro.po: Updated Romanian translation
+
 2004-09-07  Alexander Shopov  <ash@contact.bg>
 
         * bg.po: Updated Bulgarian translation
