Corrected Romanian translation
2004-09-08  Mugurel Tudor  <mugurelu@go.ro>

	* ro.po: Corrected Romanian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-08  Mugurel Tudor  <mugurelu@go.ro>
 
+	* ro.po: Corrected Romanian translation
+
+2004-09-08  Mugurel Tudor  <mugurelu@go.ro>
+
 	* ro.po: Updated Romanian translation
 
 2004-09-07  Alexander Shopov  <ash@contact.bg>
