--- a/po/ro.po
+++ b/po/ro.po
@@ -5001,7 +5001,7 @@ msgstr "Nici un favorit definit"
 
 #: src/nautilus-bookmarks-window.glade.h:1
 msgid "<b>_Bookmarks</b>"
-msgstr "<b>Fav_orite</b>"
+msgstr "<b>Favo_rite</b>"
 
 #: src/nautilus-bookmarks-window.glade.h:2
 msgid "<b>_Location</b>"
@@ -5705,7 +5705,7 @@ msgstr "_Înapoi"
 
 #: src/nautilus-navigation-window-ui.xml.h:29
 msgid "_Bookmarks"
-msgstr "Fav_orite"
+msgstr "Favo_rite"
 
 #: src/nautilus-navigation-window-ui.xml.h:30
 msgid "_Clear History"
