--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation by GNOME HK Team.
+
 2004-09-08  Mugurel Tudor  <mugurelu@go.ro>
 
 	* ro.po: Corrected Romanian translation
