Updated Danish translation.
        * da.po: Updated Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -1383,7 +1383,7 @@ msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
 msgstr ""
-"Hvis sat til sand, vil et ikon der henviser til computer-placeringen, blive "
+"Hvis sat til sand, vil et ikon der henviser til placering af maskinen, blive "
 "vist på skrivebordet."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
@@ -2829,7 +2829,7 @@ msgstr "%ld af %ld"
 #: libnautilus-private/nautilus-global-preferences.c:540
 #: nautilus-computer.desktop.in.h:1 src/nautilus-navigation-window-ui.xml.h:10
 msgid "Computer"
-msgstr "Computer"
+msgstr "Maskine"
 
 #: libnautilus-private/nautilus-file-utilities.c:371
 msgid "Network"
@@ -3261,7 +3261,7 @@ msgid ""
 "file onto your computer, you may be able to open it."
 msgstr ""
 "Der er ikke andre tilgængelige programmer som kan vise denne fil. Hvis du "
-"kopierer filen over på din computer, kan du måske åbne den."
+"kopierer filen over på din maskine, kan du måske åbne den."
 
 #: libnautilus-private/nautilus-program-choosing.c:177
 #, c-format
@@ -3278,7 +3278,7 @@ msgid ""
 "onto your computer, you may be able to open it."
 msgstr ""
 "Der er ikke andre tilgængelige handlinger som kan vise denne fil. Hvis du "
-"kopierer filen over på din computer, kan du måske åbne den."
+"kopierer filen over på din maskine, kan du måske åbne den."
 
 #: libnautilus-private/nautilus-program-choosing.c:498
 #: libnautilus-private/nautilus-program-choosing.c:724
@@ -6355,7 +6355,7 @@ msgstr "Luk denne mappes overliggende mapper"
 
 #: src/nautilus-spatial-window-ui.xml.h:7
 msgid "Go to Computer"
-msgstr "Gå til computer"
+msgstr "Gå til maskine"
 
 #: src/nautilus-spatial-window-ui.xml.h:11
 msgid "Open _Location..."
