--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-11  Abel Cheung  <maddog@linuxhall.org>
+
+	* zh_TW.po: Updated traditional Chinese translation by GNOME HK Team.
+	* ar.po, he.po: Mark wrong entry as fuzzy (msgfmt check failed).
+
 2004-09-11  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
