Added "ta" to ALL_LINGUAS.
2004-09-11  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ta" to ALL_LINGUAS.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-11  Abel Cheung  <maddog@linuxhall.org>
+
+	* configure.in: Added "ta" to ALL_LINGUAS.
+
 2004-09-06  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c: (fm_list_view_clear):
